fixing homepage spacing issues

--- a/media/css/cms/flare26-section.css
+++ b/media/css/cms/flare26-section.css
@@ -9,6 +9,10 @@
     margin: 0;
 }
 
+.fl-home-lower .fl-section {
+    padding-block: 0;
+}
+
 
 .fl-section-container {
     max-width: 1440px;
